--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/recaptcha": "^1.0.4",
+    "@nuxtjs/toast": "^3.3.1",
     "aos": "^2.3.4",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
